--- a/src/components/badges/Activity.astro
+++ b/src/components/badges/Activity.astro
@@ -4,8 +4,8 @@ import { Icon } from "astro-icon/components";
 const { icon, date, title, content } = Astro.props;
 ---
 
-<div class="flex gap-4 min-w-64">
-  <Icon name={icon} class="justify-start mt-1 h-fit text-blue-700 scale-700" />
+<div class="gap-2 grid min-w-64" style="grid-template-columns: auto 1fr;">
+  <Icon name={icon} class="justify-start mt-1 w-[48px] h-[48px] text-blue-700" />
   <div class="flex flex-col gap-1">
     <small class="font-semibold text-neutral-400">{date}</small>
     <h3 class="font-bold text-xl">{title}</h3>
