--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,15 +1,65 @@
 ---
 import { fade } from "astro:transitions";
 import MainLayout from "../../layouts/MainLayout.astro";
+import BlogPostCard from "../../components/content/BlogPostCard.astro";
+import ItemBadge from "../../components/badges/ItemBadge.astro";
+import Cover from "../../assets/marina_beach.png";
+import { getCollection } from "astro:content";
+
+// const blogPosts = Object.values(
+//   import.meta.glob("../content/blog/*.md", { eager: true })
+// );
+const posts = (await getCollection("blog")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 ---
 
 <MainLayout
   title="Atelier | Home"
-  coverSrc="https://placehold.co/800x400"
+  coverSrc={Cover}
   transition:animate={fade({ duration: "0.4s" })}
 >
+  <aside slot="extraContent" class="gap-x-4 gap-y-4 grid grid-cols-2">
+    <ItemBadge
+      leadingIcon="mdi:archive-search-outline"
+      title="Archive"
+      content="Browse through articles in a timeline."
+      color="pink"
+    />
+    <ItemBadge
+      leadingIcon="mdi:file-search-outline"
+      title="Category"
+      content="Filter articles by Categories."
+      color="amber"
+    />
+    <ItemBadge
+      leadingIcon="mdi:tag-search-outline"
+      title="Tags"
+      content="Explore all the tags used across the site."
+      color="green"
+    />
+    <ItemBadge
+      leadingIcon="mdi:file-find-outline"
+      title="Search"
+      content="Search articles by keywords."
+      color="blue"
+    />
+  </aside>
   <h1 class="font-extrabold text-4xl">The Life of Kiseki</h1>
-	<p>
-		Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, neque? Earum et perspiciatis qui laborum facilis, magnam provident vel ex voluptatum vitae itaque sapiente impedit, soluta, reprehenderit aliquid fugit. Minus!
-	</p>
+  <p class="mb-5">
+    Some of my thoughts that invade the vacuum known as 'my head'. All the
+    opinions, unless specified, are of my own. Tune in, and discover what I have
+    to say~
+  </p>
+  <div>
+    {
+      posts.map((post) => (
+        <li>
+          <a href={`/blog/${post.id}/`}>
+            <h4 class="title">{post.data.title}</h4>
+          </a>
+        </li>
+      ))
+    }
+  </div>
 </MainLayout>
