--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,10 @@ import imgCover from "../../src/assets/Unknown.png";
   >
     <Icon class="text-blue-500" name="mdi:stars" /> Kiseki's Atelier
   </h1>
-  <p
-    class="flex flex-col items-center gap-4 mt-[-4px] text-neutral-500 text-center"
+  <div
+    class="flex flex-col items-center gap-4 mt-[-4px] text-bold text-neutral-600 text-center"
   >
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
-    obcaecati molestiae atque quia placeat, esse inventore, vero excepturi porro
-    doloremque beatae qui quae molestias sit pariatur consectetur. Hic, aliquid
-    saepe.
+    Welcome in, welcome in! This is Kiseki's Atelier~, my personal space in the interwebs. Here, I share some of my art and code-related works in a centralized place, as well as some of my thoughts. It is a pleasure to have you here!
     <div class="flex items-center self-center gap-2">
       <a
         href="/blog"
@@ -37,10 +34,13 @@ import imgCover from "../../src/assets/Unknown.png";
         ><Icon name="mdi:email" />Contact Me!</a
       >
     </div>
-  </p>
+  </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:book-multiple" class="text-blue-700" />Recent Posts
+    <Icon
+      name="mdi:book-multiple-outline"
+      class="text-blue-700 text-4xl"
+    />Recent Posts
   </h2>
   <p class="mt-[-4px]">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
@@ -55,7 +55,10 @@ import imgCover from "../../src/assets/Unknown.png";
   </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:briefcase-edit" class="text-blue-700" />Services
+    <Icon
+      name="mdi:briefcase-edit-outline"
+      class="text-blue-700 text-4xl"
+    />Services
   </h2>
   <p class="mt-[-4px]">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et
@@ -86,13 +89,29 @@ import imgCover from "../../src/assets/Unknown.png";
   </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:palette" class="text-blue-700" />Recent
-    Artworks
+    <Icon name="mdi:palette-outline" class="text-blue-700 text-4xl" />Social
+    Media Feed
   </h2>
   <p class="mt-[-4px]">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-    repellat quisquam perspiciatis maxime velit ratione adipisci incidunt
-    explicabo accusamus nostrum doloribus eum nulla ea, dolores officia
-    voluptatibus sequi provident quod!
+    You can find more about my works (and sometimes, myself) over at my
+    different accounts! I suggest ya to follow me over Twitter/X since I am the
+    most active over there~!
   </p>
+  <blockquote class="twitter-tweet">
+    <p lang="en" dir="ltr">
+      Hi hi, <a
+        href="https://twitter.com/hashtag/PortfolioDay?src=hash&ref_src=twsrc%5Etfw"
+        >#PortfolioDay</a
+      >~! Name&#39;s Kiseki. I&#39;m a pixel artist that lovs to draw pretty
+      girls. Hope you like my animations, my sprites, and my illustrations.<br
+      /><br />Pleased to meet ya~ <a href="https://t.co/aopmwwu2kX"
+        >pic.twitter.com/aopmwwu2kX</a
+      >
+    </p>&mdash; Kiseki 奇跡 (@_kiseki_miracle) <a
+      href="https://twitter.com/_kiseki_miracle/status/1910023900450238633?ref_src=twsrc%5Etfw"
+      >April 9, 2025</a
+    >
+  </blockquote>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"
+  ></script>
 </MainLayout>
