--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -38,7 +38,7 @@ const yearNow = new Date().getFullYear();
     </span>
   </p>
   <p class="flex flex-col gap-2 text-extrabold text-md uppercase">
-    Socials
+    Links
     <span class="flex gap-1 text-neutral-700">
       <a
         href="https://www.pixiv.net/en/users/110005305"
