--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,7 +50,7 @@ import Activity from "../components/badges/Activity.astro";
       <TechBadge icon="lineicons:flutter" label="Flutter" />
     </div>
   </div>
-  <div class="flex flex-col gap-4 mt-6.5">
+  <div class="flex flex-col gap-4 mt-6.5 mb-4">
     <h2 class="flex items-center gap-2 font-extrabold text-3xl">
       <Icon name="mdi:new-box" class="text-blue-700" />Recent Activity
     </h2>
@@ -70,17 +70,5 @@ import Activity from "../components/badges/Activity.astro";
         content="Kiseki's Atelier Project is started."
       />
     </div>
-  </div>
-  <div class="flex flex-col gap-1 mt-5">
-    <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-      <Icon name="lineicons:github" class="text-blue-700" />Github Repository
-    </h2>
-    <p>
-      If for some reason you are curious about how this website was built, you
-      can check the repo over <a href="https://github.com/KisekiMiracle/kiseki-personal-site" rel="noopener noreferrer" class="border-b-2 border-b-blue-700 hover:border-b-transparent text-blue-700 hover:text-blue-500 transition-all duration-150 700">here</a>. My commit messages are really vague
-      at the beginning due to just pushing code to bounce off my macbook and PC
-      (I only coded on the PC once) at the early stages of development. Also, I
-      have no idea if my way of coding is "proper" nor "clear"–I try my best.
-    </p>
   </div>
 </MainLayout>
