--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,9 @@ import MainLayout from "../layouts/MainLayout.astro";
 import { fade } from "astro:transitions";
 
 import imgCover from "../../src/assets/Unknown.png";
+const blogPosts = Object.values(
+  import.meta.glob("./blog/*.{md,mdx}", { eager: true })
+);
 ---
 
 <MainLayout
@@ -21,7 +24,10 @@ import imgCover from "../../src/assets/Unknown.png";
   <div
     class="flex flex-col items-center gap-4 mt-[-4px] text-bold text-neutral-600 text-center"
   >
-    Welcome in, welcome in! This is Kiseki's Atelier~, my personal space in the interwebs. Here, I share some of my art and code-related works in a centralized place, as well as some of my thoughts. It is a pleasure to have you here!
+    Welcome in, welcome in! This is Kiseki's Atelier~, my personal space in the
+    interwebs. Here, I share some of my art and code-related works in a
+    centralized place, as well as some of my thoughts. It is a pleasure to have
+    you here!
     <div class="flex items-center self-center gap-2">
       <a
         href="/blog"
@@ -48,11 +54,23 @@ import imgCover from "../../src/assets/Unknown.png";
     explicabo accusamus nostrum doloribus eum nulla ea, dolores officia
     voluptatibus sequi provident quod!
   </p>
-  <div class="flex flex-col gap-4">
-    <BlogPostCard />
-    <BlogPostCard />
-    <BlogPostCard />
-  </div>
+  <ul class="flex flex-col gap-4">
+    {
+      blogPosts.map((post: any) => (
+        <li>
+          <BlogPostCard
+            title={post.frontmatter.title}
+            description={post.frontmatter.description}
+            ref={`/blog/${post.frontmatter.url}/`}
+            imgSrc={post.frontmatter.heroImage}
+            wordCount={post.frontmatter.wordCount}
+            readTime={post.frontmatter.readTime}
+            pubDate={post.frontmatter.pubDate}
+          />{" "}
+        </li>
+      ))
+    }
+  </ul>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
     <Icon
@@ -89,8 +107,10 @@ import imgCover from "../../src/assets/Unknown.png";
   </div>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon name="mdi:palette-outline" class="text-blue-700 text-4xl" />Social
-    Media Feed
+    <Icon
+      name="mdi:message-bubble-outline"
+      class="text-blue-700 text-4xl"
+    />Social Media Feed
   </h2>
   <p class="mt-[-4px]">
     You can find more about my works (and sometimes, myself) over at my
