--- a/src/components/section/Cover.astro
+++ b/src/components/section/Cover.astro
@@ -15,6 +15,6 @@ const { imgSource, position = "object-center" } = Astro.props;
     width="900"
     height="400"
     inferSize={true}
-    class=`w-max max-h-[400px] object-cover ${position}`
+    class=`w-full max-h-[400px] object-cover ${position}`
   />
 </div>
