Update: Home Page done. Added Artworks page.

--- a/src/components/content/BlogPostCard.astro
+++ b/src/components/content/BlogPostCard.astro
@@ -81,7 +81,7 @@ const {
         data-chevron
       />
     </div>
-    <img src={imgSrc} alt="" class="w-full h-[262px] max-h-[262px] object-cover" />
+    <img src={imgSrc} alt="" class="min-w-[337px] h-[262px] max-h-[262px] object-cover" />
   </a>
 </div>
 
