--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -6,6 +6,8 @@ import Tag from "../components/badges/Tag.astro";
 import { Icon } from "astro-icon/components";
 
 const { frontmatter } = Astro.props;
+
+export const prerender = false;
 ---
 
 <MainLayout
