--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Activity from "../components/badges/Activity.astro";
 ---
 
 <MainLayout
-  title="Atelier | Home"
+  title="About | Kiseki's Atelier"
   coverSrc={coverImg}
   coverPosition="object-bottom"
   transition:animate={fade({ duration: "0.4s" })}
@@ -31,7 +31,7 @@ import Activity from "../components/badges/Activity.astro";
       </p>
     </div>
   </div>
-  <div class="flex flex-col gap-1 mt-3">
+  <div class="flex flex-col gap-1 mt-4">
     <h2 class="flex items-center gap-2 font-extrabold text-3xl">
       <Icon name="lineicons:code-1" class="text-blue-700" />Statistics for Nerds
     </h2>
@@ -50,7 +50,7 @@ import Activity from "../components/badges/Activity.astro";
       <TechBadge icon="lineicons:flutter" label="Flutter" />
     </div>
   </div>
-  <div class="flex flex-col gap-4 mt-6.5 mb-4">
+  <div class="flex flex-col gap-4 mt-7 mb-4">
     <h2 class="flex items-center gap-2 font-extrabold text-3xl">
       <Icon name="mdi:new-box" class="text-blue-700" />Recent Activity
     </h2>
