--- a/src/components/badges/Tag.astro
+++ b/src/components/badges/Tag.astro
@@ -1,36 +1,43 @@
 ---
 import { Icon } from "astro-icon/components";
 
-const { icon, label, color } = Astro.props;
+interface Props {
+  icon: string;
+  label: string;
+  color: string;
+}
+
+const { icon, label, color }: Props = Astro.props;
+
 const hoverBG: any = {
   neutral: "hover:bg-neutral-700",
-	blue: "hover:bg-blue-700",
-	red: "hover:bg-red-700",
-	amber: "hover:bg-amber-700",
-	green: "hover:bg-green-700",
-	pink: "hover:bg-pink-700",
-	purple: "hover:bg-purple-700",
-	// …
+  blue: "hover:bg-blue-700",
+  red: "hover:bg-red-700",
+  amber: "hover:bg-amber-700",
+  green: "hover:bg-green-700",
+  pink: "hover:bg-pink-700",
+  purple: "hover:bg-purple-700",
+  // …
 };
 const BG: any = {
   neutral: "text-neutral-700",
-	blue: "text-blue-700",
-	red: "text-red-700",
-	amber: "text-amber-700",
-	green: "text-green-700",
-	pink: "text-pink-700",
-	purple: "text-purple-700",
-	// …
+  blue: "text-blue-700",
+  red: "text-red-700",
+  amber: "text-amber-700",
+  green: "text-green-700",
+  pink: "text-pink-700",
+  purple: "text-purple-700",
+  // …
 };
 const lightBG: any = {
   neutral: "bg-neutral-100",
-	blue: "bg-blue-50",
-	red: "bg-red-50",
-	amber: "bg-amber-50",
-	green: "bg-green-50",
-	pink: "bg-pink-50",
-	purple: "bg-purple-50",
-	// …
+  blue: "bg-blue-50",
+  red: "bg-red-50",
+  amber: "bg-amber-50",
+  green: "bg-green-50",
+  pink: "bg-pink-50",
+  purple: "bg-purple-50",
+  // …
 };
 ---
 
@@ -39,7 +46,7 @@ const lightBG: any = {
   data-tag
 >
   <Icon name={icon} class=`font-bold ${BG[color]}` />
-  <span class=`font-bold ${BG[color]} text-sm`>
+  <span class=`font-bold ${BG[color]} text-sm whitespace-nowrap`>
     {label}
   </span>
 </p>
