--- a/src/components/content/ServiceCard.astro
+++ b/src/components/content/ServiceCard.astro
@@ -1,26 +1,52 @@
 ---
+/** biome-ignore-all lint/correctness/noUnusedVariables: <-> */
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
+
 import { Icon } from "astro-icon/components";
-const { icon, title, ref } = Astro.props;
+import { Image } from "astro:assets";
+
+const { icon, title, ref, imgArr } = Astro.props;
 ---
 
 <div
   class="flex flex-col gap-2 shadow-md shadow-neutral-300 px-6.5 py-6 rounded-2xl outline-[1px] outline-neutral-100"
   data-service-card
 >
-  <div class="flex items-center gap-2">
-    <Icon name={icon} class="text-neutral-700 text-2xl" />
-    <h3 class="font-extrabold text-xl">{title}</h3>
+  <div class="flex justify-between items-center">
+    <div class="flex items-center gap-2">
+      <Icon name={icon} class="text-neutral-700 text-2xl" />
+      <h3 class="font-extrabold text-xl">{title}</h3>
+    </div>
+    <a
+      href={ref ?? "/"}
+      class="flex items-center self-end gap-0 border-b-2 border-b-blue-400 text-blue-500 whitespace-nowrap"
+    >
+      <small class="font-bold text-xs">learn more</small><Icon
+        name="mdi:arrow-right-thin"
+      />
+    </a>
   </div>
-  <div class="flex flex-col gap-2">
-    <p class="inline-flex flex-col gap-1">
+  <div class="flex flex-col items-center gap-2">
+    <p
+      class="inline-flex items-center gap-1 py-2 w-xl text-neutral-500 text-sm text-center"
+    >
       <slot />
-      <a
-        href={ref ?? "/"}
-        class="flex items-center self-end gap-0 border-b-2 border-b-blue-400 text-blue-500 whitespace-nowrap"
-        ><small class="font-bold">read more</small><Icon
-          name="mdi:arrow-right-thin"
-        /></a
-      >
     </p>
+    <div class="flex items-center gap-2 mx-auto w-full max-w-4xl h-[400px]">
+      {
+        imgArr.map((img: any) => (
+          <div class="group relative flex-grow rounded-lg w-56 hover:w-full h-[400px] overflow-hidden transition-all duration-500">
+            <Image
+              src={img}
+              alt=""
+              class="w-full h-full object-center object-cover"
+              width="1200"
+              height="1000"
+            />
+          </div>
+        ))
+      }
+    </div>
   </div>
 </div>
