--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,27 @@ import MainLayout from "../layouts/MainLayout.astro";
 import { fade } from "astro:transitions";
 
 import imgCover from "../../src/assets/Unknown.png";
+
+// Pixel Art Assets
+import img_1 from "../assets/artworks__marina_idle.gif";
+import img_2 from "../assets/artworks__maya_idle.gif";
+
+// Character Illustrations Assets
+import img_3 from "../assets/artworks__marina_2023.png";
+import img_4 from "../assets/artworks__marina_2024.png";
+import img_5 from "../assets/artworks__sendai_2024.jpeg";
+
+// Frontend Development Assets
+import img_6 from "../assets/frontend__ripvisuals.png";
+import img_7 from "../assets/frontend__kiseki.png";
+
 const blogPosts = Object.values(
   import.meta.glob("./blog/*.{md,mdx}", { eager: true })
 );
 ---
 
 <MainLayout
-  title="Atelier | Home"
+  title="Home | Kiseki's Atelier"
   coverSrc={imgCover}
   transition:animate={fade({ duration: "0.4s" })}
 >
@@ -32,13 +46,15 @@ const blogPosts = Object.values(
       <a
         href="/blog"
         class="flex items-center gap-2 bg-blue-500 hover:bg-blue-700 px-4 py-2 border-2 border-blue-500 hover:border-blue-700 rounded-xl w-fit text-white text-sm transition-all duration-150"
-        ><Icon name="mdi:email" />Explore Blog</a
-      >
+        ><Icon name="mdi:email" />
+        Explore Blog
+      </a>
       <a
-        href="/"
+        href="/contact"
         class="flex items-center gap-2 hover:bg-neutral-800 px-4 py-2 border-2 border-neutral-800 rounded-xl w-fit text-neutral-800 hover:text-white text-sm transition-all duration-150"
-        ><Icon name="mdi:email" />Contact Me!</a
       >
+        <Icon name="mdi:email" />Contact Me!
+      </a>
     </div>
   </div>
   <hr class="my-2 text-transparent" />
@@ -49,10 +65,9 @@ const blogPosts = Object.values(
     />Recent Posts
   </h2>
   <p class="mt-[-4px]">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-    repellat quisquam perspiciatis maxime velit ratione adipisci incidunt
-    explicabo accusamus nostrum doloribus eum nulla ea, dolores officia
-    voluptatibus sequi provident quod!
+    My yapping corner~ I talk about my personal life, maybe something about
+    programming, art or game development. Perhaps gushing over some anime I
+    really like. Who knows!
   </p>
   <ul class="flex flex-col gap-4">
     {
@@ -66,43 +81,57 @@ const blogPosts = Object.values(
             wordCount={post.frontmatter.wordCount}
             readTime={post.frontmatter.readTime}
             pubDate={post.frontmatter.pubDate}
-          />{" "}
+          />
         </li>
       ))
     }
   </ul>
   <hr class="my-2 text-transparent" />
   <h2 class="flex items-center gap-2 font-extrabold text-3xl">
-    <Icon
-      name="mdi:briefcase-edit-outline"
-      class="text-blue-700 text-4xl"
-    />Services
+    <Icon name="mdi:briefcase-edit-outline" class="text-blue-700 text-4xl" />
+    Services
   </h2>
   <p class="mt-[-4px]">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugiat et
-    explicabo corrupti repudiandae fuga natus neque vitae
+    Would you like to bring your ideas to life? Let's work together and make
+    those concepts a reality–is not just a drawing, but a dream come true~
   </p>
   <div class="flex flex-col gap-4">
-    <ServiceCard icon="mdi:cube-scan" title="Pixel Art">
-      Would you like to bring your ideas to life? Let's work together and make
-      those concepts a reality–is not just a drawing, but a dream come true~
+    <ServiceCard
+      icon="mdi:cube-scan"
+      title="Animated Pixel Art"
+      imgArr={[img_1, img_2]}
+    >
+      <span>
+        Cute little animated sprites~ I try my best to bring out the charm of
+        those characters. And <a
+          href="/contact"
+          class="border-b border-b-blue-600 hover:border-b-transparent text-blue-600 hover:text-blue-500 transition-all duration-200"
+          >you can have your own</a
+        > as well!
+      </span>
     </ServiceCard>
-    <ServiceCard icon="mdi:art" title="Character Design" ref="/about">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id sed
-      distinctio libero illum eius repudiandae beatae facere eligendi autem,
-      officiis tempora amet eaque nesciunt, esse minus odit quaerat quis sit.
+    <ServiceCard
+      icon="mdi:art"
+      title="Character Illustrations"
+      ref="/about"
+      imgArr={[img_3, img_4, img_5]}
+    >
+      <span
+        >Maximizing the amount of pixels in a single piece~! While pixelart
+        excels in lower resolutions, I believe larger canvases have a story to
+        tell.
+      </span>
     </ServiceCard>
-    <ServiceCard icon="mdi:webpack" title="Frontend Web Development">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolore
-      id voluptatum atque magnam officia, praesentium sequi aut vero ab,
-      molestias sit fugiat distinctio accusantium. Tempore quibusdam modi est
-      voluptate!
-    </ServiceCard>
-    <ServiceCard icon="mdi:webhook" title="Task Automation">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-      necessitatibus magni maxime provident. Laborum, exercitationem animi
-      inventore ratione eveniet aspernatur a minima sed perferendis rem itaque,
-      reprehenderit autem non recusandae!
+    <ServiceCard
+      icon="logos:html-5"
+      title="Frontend Web Development"
+      imgArr={[img_6, img_7]}
+    >
+      <span>
+        Do you have a business that needs online positioning? Need a central hub
+        to display your important links? Perhaps need help to implement the
+        frontend of your app?
+      </span>
     </ServiceCard>
   </div>
   <hr class="my-2 text-transparent" />
